# Parla

./: main.py  pyproject.toml  requirements.txt  textos_para_fala.xlsx
